# publico

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
account_move_needed_terms_fix/: README.md  __manifest__.py
account_move_needed_terms_fix/models/: account_move.py
account_payment_group_fix_grupofrancia/: README.md  __manifest__.py
account_payment_pro/: README.rst  __manifest__.py
account_payment_pro_receiptbook/: __init__.py  __manifest__.py
account_terms_fix/: __manifest__.py
account_ux_copy_fix/: README.md  __manifest__.py
api_tester_gui/: README.md  app_gui.py  endpoints_loader.py  openapi_support.py
docs/: meli_escalabilidad_analisis.html  meli_escalabilidad_analisis.md
examples/: basic_usage.py  error_handling.py  sync_usage.py
food_novelty_stock_voucher_fix/: README.md  __manifest__.py  docs_hito_oc_cliente_stock_picking.py
gateway_p/: -w  .dockerignore  .gitignore  CHECKLIST_AUTENTICACION.md  Dockerfile  IMPLEMENTACION_AUTENTICACION.md  INICIO_RAPIDO_AUTENTICACION.md  MAPA_CAMBIOS.md  README.md  REFERENCIA_RAPIDA_AUTH.md  alembic.ini  deploy.ps1  deploy.sh  docker-compose.yml  generate_token.py  requirements.txt  test_bdc_connection.py  test_password_hash.py  test_ssl_debug.py  test_transfer.sh  test_transfer_request_new.py
hito_orden_de_compra_del_cliente_fix/: __manifest__.py
hr_expense_custom/: README.md  __manifest__.py
l10n_ar_payment_receipt_fix/: __manifest__.py
l10n_ar_vat_book_multicompany_fix/: README.md  __manifest__.py
l10n_ar_withholding_manual_preserve/: __manifest__.py
meli_oerp_async/: README.md  __manifest__.py
meli_oerp_optimized/: __manifest__.py
product_replenishment_cost/: __manifest__.py
purchase_portal_auth_required/: README.md  __manifest__.py
purchase_price_no_round/: __manifest__.py
purchase_price_no_round_hito/: __manifest__.py
sale_discount_display_amount_custom/: README.md  __manifest__.py  hooks.py
tests/: __init__.py  conftest.py
(+251 files in other folders)
